re-organized styles and added beta responsive design

--- a/src/app/components/patient/calendar/calendar.component.html
+++ b/src/app/components/patient/calendar/calendar.component.html
@@ -1,4 +1,5 @@
-<p>
+<h3 class="text-accent">Calendar</h3>
+<p class="hint">
   Welcome to your calendar.<br />
   Here you can see all the notes taken so far. It is possible to sort them by
   title or date.
@@ -73,7 +74,6 @@
             color: note.shared ? 'rgb(255, 120, 80)' : ''
           }"
         >
-          <!-- AGGIORNA VIEW QUANDO CAMBI LA VISIBILITÀ DI UNA NOTA! CAMBIA ANCHE IL COLORE! RICORDATI DI AGGIUNGERE UN MODO PER ELIMINARE LE NOTE! -->
           <mat-icon>{{ note.shared ? "toggle_on" : "toggle_off" }}</mat-icon>
         </button>
       </td></ng-container
