--- a/src/app/components/patient/daily-note/daily-note.component.html
+++ b/src/app/components/patient/daily-note/daily-note.component.html
@@ -1,4 +1,5 @@
-<p>
+<h3 class="text-accent">Daily note</h3>
+<p class="hint">
   Welcome to the daily note section.<br />
   Every time you access this section of the app a new note will be created.
   <br />
