--- a/src/app/components/patient/diary/diary.component.html
+++ b/src/app/components/patient/diary/diary.component.html
@@ -1,1 +1,8 @@
+<h3 class="text-accent">Diary</h3>
+<p class="hint">
+  This space is dedicated to write down everything that may be useful for you:
+  considerations, reminders, lists of topics to deepen or reflections. <br />
+  It is designed to help you easily keep track of important information and have
+  it always at hand.
+</p>
 <app-note-viewer [note]="note"></app-note-viewer>
