--- a/src/app/components/patient/list-of-features/list-of-features.component.html
+++ b/src/app/components/patient/list-of-features/list-of-features.component.html
@@ -1,7 +1,7 @@
 <section class="card tp-card card-theme">
   <app-therapist-card></app-therapist-card>
 </section>
-<div class="list-of-patients-container">
+<div class="list-of-features">
   <mat-card
     class="feature-card card-theme"
     appearance="outlined"
@@ -17,7 +17,7 @@
       ></mat-icon>
     </div>
     <mat-card-content>
-      <mat-card-title>Diary</mat-card-title>
+      <mat-card-title><h4 class="two-lined-text">Diary</h4></mat-card-title>
     </mat-card-content>
   </mat-card>
   <mat-card
@@ -35,7 +35,7 @@
       ></mat-icon>
     </div>
     <mat-card-content>
-      <mat-card-title>Calendar</mat-card-title>
+      <mat-card-title><h4 class="two-lined-text">Calendar</h4></mat-card-title>
     </mat-card-content>
   </mat-card>
   <mat-card
@@ -53,7 +53,9 @@
       ></mat-icon>
     </div>
     <mat-card-content>
-      <mat-card-title>Daily Note</mat-card-title>
+      <mat-card-title
+        ><h4 class="two-lined-text">Daily Note</h4></mat-card-title
+      >
     </mat-card-content>
   </mat-card>
 </div>
