--- a/src/app/components/utilities/quill-text-editor/quill-text-editor.component.html
+++ b/src/app/components/utilities/quill-text-editor/quill-text-editor.component.html
@@ -1,13 +1,13 @@
-<div class="container">
-  <form [formGroup]="titleForm" class="form note-form">
-    <mat-form-field>
+<div class="text-editor-container form">
+  <form [formGroup]="titleForm" class="note-form" *ngIf="role == 'patient'">
+    <mat-form-field class="form-field">
       <mat-label>Title</mat-label>
       <input matInput type="text" name="title" formControlName="title" />
     </mat-form-field>
     <mat-error *ngIf="titleForm.controls['title'].invalid">
       Title max length is 50 characters.
     </mat-error>
-    <mat-form-field>
+    <mat-form-field class="form-field">
       <mat-label>Tags</mat-label>
       <mat-chip-grid #chipGrid aria-label="Enter tags">
         @for (tag of tags(); track tag) {
@@ -33,7 +33,7 @@
       </mat-chip-grid>
     </mat-form-field>
   </form>
-  <quill-editor format="json" [(ngModel)]="note.content">
+  <quill-editor format="json" [(ngModel)]="note.content" class="text-editor">
     <div above-quill-editor-toolbar class="editor-hint">
       If you need help using the editor, please press the 3 vertical dots in the
       editor toolbar below and select the "Help" option in the drop-down menu.
@@ -93,10 +93,6 @@
             <mat-icon>save</mat-icon>
             <span>Save</span>
           </button>
-          <button mat-menu-item [disabled]="note_id == 1" (click)="delete()">
-            <mat-icon>delete</mat-icon>
-            <span>Delete</span>
-          </button>
           <button mat-menu-item (click)="help()">
             <mat-icon>help</mat-icon>
             <span>Help</span>
@@ -106,5 +102,3 @@
     </div>
   </quill-editor>
 </div>
-
-<button (click)="ua()"></button>
