--- a/src/app/components/therapist/patient-personal-page/patient-personal-page.component.scss
+++ b/src/app/components/therapist/patient-personal-page/patient-personal-page.component.scss
@@ -1,19 +1,30 @@
-.icons-container {
-  padding: 12px 5px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+#discharge-patient-btn {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  color: crimson;
 }
 .card {
-  width: 90vw;
-  .card-img {
-    width: 50vw;
-    img {
-      width: inherit;
-      border-radius: 100%;
-    }
+  position: relative;
+}
+
+.icon-container {
+  margin: 15px;
+  width: 33vw;
+  height: 33vw;
+  border-radius: 50%;
+  background-color: white;
+  box-shadow: 2px 2px 3px lightgrey;
+  align-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .feature-icon {
+    width: 30vw;
+    height: 30vw;
   }
-  .card-content {
-    width: 80vw;
-  }
+}
+
+.patient-notes {
+  width: 100%;
 }
