--- a/src/app/components/utilities/quill-text-editor/quill-text-editor.component.scss
+++ b/src/app/components/utilities/quill-text-editor/quill-text-editor.component.scss
@@ -1,3 +1,10 @@
+.form-field {
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 15px;
+}
+
 .ql-toolbar {
   .ql-formats {
     margin: 8px 0;
