--- a/src/styles.scss
+++ b/src/styles.scss
@@ -293,7 +293,7 @@ body {
 
     .feature-card {
       width: 40%;
-      min-height: 300px;
+      min-height: 350px;
       cursor: pointer;
       .icon-container {
         min-width: 200px;
@@ -373,7 +373,19 @@ body {
       }
     }
     //therapist-main-page
+    // > list-of-patients
+
     // > patient-personal-page
+    .p-card {
+      #discharge-patient-btn {
+        top: 1rem;
+        right: 1rem;
+      }
+      mat-icon {
+        padding: 0;
+        font-size: 32px;
+      }
+    }
   }
 }
 
