--- a/src/app/components/therapist/patient-personal-page/patient-personal-page.component.html
+++ b/src/app/components/therapist/patient-personal-page/patient-personal-page.component.html
@@ -15,7 +15,7 @@
     ></mat-icon>
   </div>
   <div class="card-content">
-    <h2>{{ patient.name }} {{ patient.surname }}</h2>
+    <h2>{{ patient?.name }} {{ patient?.surnname }}</h2>
   </div>
 </section>
 <section class="card" style="margin-top: 10px">
@@ -49,7 +49,7 @@
       >
         <mat-chip-set *ngIf="note.tags; else noTags">
           <mat-chip *ngFor="let tag of note.tags">
-            {{ tag.name }}
+            {{ tag?.name }}
           </mat-chip>
         </mat-chip-set>
         <ng-template #noTags> "No tags avaliable" </ng-template>
@@ -78,7 +78,7 @@
         <button
           mat-icon-button
           aria-label="Edit icon"
-          [disabled]="note.id == 1"
+          [disabled]="note?.id == 1"
           (click)="openNote(note)"
         >
           <mat-icon>article</mat-icon>
