Added a query progress bar to the entire application (via loader service and interceptor)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<mat-progress-bar
+  *ngIf="loader.loading$ | async"
+  mode="query"
+  color="accent"
+></mat-progress-bar>
 <router-outlet></router-outlet>
