--- a/src/app/components/patient/list-of-features/list-of-features.component.html
+++ b/src/app/components/patient/list-of-features/list-of-features.component.html
@@ -5,7 +5,7 @@
   <mat-card
     class="feature-card card-theme"
     appearance="outlined"
-    [routerLink]="['diary']"
+    [routerLink]="['personal-notes']"
     routerLinkActive="router-link-active"
   >
     <div class="icon-container">
