--- a/src/app/components/therapist/list-of-features/list-of-features.component.html
+++ b/src/app/components/therapist/list-of-features/list-of-features.component.html
@@ -11,7 +11,7 @@
     class="feature-card card-theme"
     appearance="outlined"
     routerLinkActive="router-link-active"
-    [routerLink]="['diary']"
+    [routerLink]="['personal-notes']"
   >
     <div class="icon-container">
       <mat-icon
