--- a/src/app/components/therapist/patient-personal-page/patient-personal-page.component.html
+++ b/src/app/components/therapist/patient-personal-page/patient-personal-page.component.html
@@ -15,7 +15,7 @@
     ></mat-icon>
   </div>
   <div class="card-content">
-    <h2>{{ patient?.name }} {{ patient?.surnname }}</h2>
+    <h2>{{ patient?.name }} {{ patient?.surname }}</h2>
   </div>
 </section>
 <section class="card" style="margin-top: 10px">
