--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,6 +73,12 @@ body {
     max-height: 90vh;
     overflow-y: auto;
     background-color: white;
+    h1,
+    h2,
+    h3,
+    h4 {
+      text-align: unset;
+    }
   }
 
   .spinner {
